--- a/layout-sample/index.html
+++ b/layout-sample/index.html
@@ -37,7 +37,9 @@
       <a href="keyword1/index.html"><img alt="9" class="photo" src="images/9.png"></a>
     </div>
   </main>
-  <footer>This site created by SUGIMOTO Tatsuo. 2023.</footer>
+  <footer>
+    This site created by SUGIMOTO Tatsuo. 2023.
+  </footer>
 </body>
 
 </html>
