--- a/layout-sample/keyword1/index.html
+++ b/layout-sample/keyword1/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="ja">
-
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>キーワード1</title>
   <link rel="stylesheet" href="../style.css">
 </head>
-
 <body>
   <header>
     <h1 class="title"><a href="../index.html">🔑 Sugimoto's Keywords</a></h1>
   </header>
   <nav>
     <ul>
-      <li><a href="../keyword1/index.html">Keyword 1</a></li>
+      <li class="on"><a href="../keyword1/index.html">Keyword 1</a></li>
       <li><a href="../keyword2/index.html">Keyword 2</a></li>
       <li><a href="../keyword3/index.html">Keyword 3</a></li>
       <li><a href="../keyword4/index.html">Keyword 4</a></li>
@@ -25,12 +23,10 @@
     </ul>
   </nav>
   <main>
-    <div>
-      <img alt="1" class="photo" src="../images/1.png"><br>
-      キーワード１の説明文です。<br>
-    </div>
+    キーワード1の本文です。
   </main>
-  <footer>This site created by SUGIMOTO Tatsuo. 2023.</footer>
+  <footer>
+    This site created by SUGIMOTO Tatsuo. 2023.
+  </footer>
 </body>
-
 </html>
